<resources>
    <string name="app_name">Let NSA Track You</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name_field">Name</string>
    <string name="password_field">Password</string>
    <string name="secret_question">Secret Question</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="go">Go</string>
    <string name="title_activity_user_agreement">UserAgreement</string>
    <string name="agree">I Agree</string>
    <string name="disagree">I Disagree</string>
    <string name="title_activity_my_trajectory">MyTrajectory</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="start_date">Start Date</string>
    <string name="data">Data</string>
    <string name="end_date">End Date</string>
    <string name="map_text">Map</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_Location_activity">LocationActivity</string>


</resources>
