<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/list_grad">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_field"
        android:ems="10"
        android:id="@+id/email_field"
        android:phoneNumber="false"
        android:textColorHighlight="#FFFFFF"
        android:layout_above="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:hint="@string/password_field"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/secret_question"
        android:hint="@string/secret_question"
        android:layout_below="@+id/password_field"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_alignLeft="@+id/password_field"
        android:layout_alignStart="@+id/password_field" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/secret_answer"
        android:hint="@string/secret_answer"
        android:layout_below="@+id/secret_question"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_button"
        android:background="@drawable/list_grad2"
        android:textColor="#FFEFFF"
        android:padding="5dp"
        android:onClick="registerUser"
        android:layout_below="@+id/secret_answer"
        android:layout_centerHorizontal="true" />





</RelativeLayout>
