<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/list_grad">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_field"
        android:ems="10"
        android:id="@+id/email_field"
        android:layout_above="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:phoneNumber="false"
        android:textColorHighlight="#FFFFFF"
        android:layout_margin="5dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_field"
        android:layout_margin="5dp"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button69"
        android:layout_alignEnd="@+id/button69"
        android:layout_alignLeft="@+id/forgot_password_button"
        android:layout_alignStart="@+id/forgot_password_button"
        android:padding="5dp"
        android:onClick="logIn"
        android:layout_margin="5dp"
        android:background="@drawable/list_grad2"
        android:textColor="#FFEFFF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button69"
        android:layout_below="@+id/login_button"
        android:layout_alignRight="@+id/forgot_password_button"
        android:layout_alignEnd="@+id/forgot_password_button"
        android:layout_alignLeft="@+id/forgot_password_button"
        android:layout_alignStart="@+id/forgot_password_button"
        android:padding="5dp"
        android:onClick="register"
        android:layout_margin="5dp"
        android:background="@drawable/list_grad2"
        android:textColor="#FFEFFF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password_button"
        android:layout_below="@+id/button69"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:onClick="forgotPassword"
        android:background="@drawable/list_grad2"
        android:textColor="#FFEFFF"/>



</RelativeLayout>
